--- a/Profile/LK/templates/lk/filial.html
+++ b/Profile/LK/templates/lk/filial.html
@@ -9,12 +9,12 @@
     <div class="content-header sty-one">
         <div class="row">
             <div class="col-6">
-            <h1 class="text-black">Клуб</h1>
+                {%if request.user.job == 'Руководитель клуба'%}
+            <h1 class="text-black">{{filial}}</h1>
+                {%else%}
+                <h1 class="text-black">Группы</h1>
+                {%endif%}
         </div>
-
-            <div class="col-3 offset-md-3">
-                <a href="{%url 'create_group'%}" class="btn btn-rounded btn-warning">Добавить группу</a>
-            </div>
 
         </div>
     </div>
@@ -22,7 +22,7 @@
 
     <ul class="nav nav-tabs customtab2" role="tablist">
         <li class="nav-item">
-        <a class="nav-link"  role="tab" href="{%url 'groups'%}">Все группы</a>
+        <a class="nav-link"  role="tab" href="{%url 'groups'%}">Все филиалы</a>
       </li>
       {%for filial in filials%}
       <li class="nav-item">
@@ -31,7 +31,9 @@
     </ul>
 
       <div class="info-box">
+
         <h4 class="text-black">Группы</h4>
+
         <div class="table-responsive">
 
           <table class="table">
@@ -49,10 +51,13 @@
                 <td>{{group.name}}</td>
                 <td>{{group.cost}}</td>
                 <td>{{group.filial}}</td>
-                <td>{{group.trainer}}</td>
+                <td>{{group.trainer.last_name}} {{group.trainer.first_name}} {{group.trainer.mid_name}}</td>
                   <td><a href="{%url 'group_update' pk=group.id%}"> Изменить</a></td>
               </tr>
             {%endfor%}
+            <tr>
+                <td><a href="{%url 'create_group' filial.id%}" class="btn btn-rounded btn-warning">Добавить группу</a></td>
+            </tr>
             </tbody>
           </table>
         </div>
