--- a/Profile/LK/templates/lk/news.html
+++ b/Profile/LK/templates/lk/news.html
@@ -8,7 +8,7 @@
             <div class="col-6">
             <h1 class="text-black">Новости</h1>
         </div>
-            {%if request.user.job != 'Спортсмен' or request.job.user != 'Ассистент'%}
+            {%if request.user.job != 'Спортсмен' and request.user.job != 'Ассистент'%}
             <div class="col-3 offset-md-3">
                 <a href="{%url 'create_news'%}" class="btn btn-rounded btn-warning">Добавить новость</a>
             </div>
