--- a/Profile/LK/templates/lk/orders.html
+++ b/Profile/LK/templates/lk/orders.html
@@ -27,7 +27,42 @@
                 <td>{{order.size}}</td>
                 <td>{{order.color}}</td>
                 <td>{{order.status}}</td>
+                  {% if order.status == 'Ожидает оплаты' %}
+                <td>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Удалить
+                </button>
+
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+               <div class="modal-header">
+               <h5 class="modal-title" id="exampleModalLabel">Удалить?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Удалить заказ "{{order.name}}"? Это действие нельзя отменить.
+            </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          <form action="{%url 'delete_order' pk=order.pk%}" method="POST">
+            {% csrf_token %}
+            <button class="btn btn-primary">Удалить</button>
+            </form>
+
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+</td>
+                  {% else %}
+                  <td><button type="button" class="btn btn-primary" disabled>Удалить</button></td>
+                  {% endif %}
               </tr>
+
             {%endfor%}
             </tbody>
           </table>
